docs(tooling): Phase 1 - scrub stale NonLiteralMarker refs + post-Phase-6 cleanup
ToolingBlockEntities: replace 5 dangling {@link NonLiteralMarker} / {@link #NON_LITERAL}
references (deleted in Phase 4, relocated to AsmKit.LiteralStack#pushNonLiteral in Phase 6)
with plain-text "non-literal marker" wording / {@code pushNonLiteral} calls.

Sweeps remaining post-Phase-6 orphans bundled with the same intent:
- EntityBlockOverlayResolver, EntityLayerDefinitionResolver, EntityRendererDiscovery,
  EntityTextureResolver, MobRegistryDiscovery: drop empty /** JVM internal name of X */
  blocks left behind by VanillaSourceClasses extraction.
- InventoryTransformDecomposer: extract QUATERNIONFC constant; migrate
  Deque.get/remove(size-1) -> getLast/removeLast (Java 21 SequencedCollection).
- TintDiscovery, YAxis, AsmKit: minor whitespace tidy.

No behavior change. compileJava + test + slowTest --tests *EntityParity* all green.